On tapping Trump head.. going to quote screen now instead and playing random quote. On tapping Trump head here, playing new quote. Spewing only 1 quote after you tap 'got it'

--- a/trump-alarm/Base.lproj/Main.storyboard
+++ b/trump-alarm/Base.lproj/Main.storyboard
@@ -117,6 +117,8 @@
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                     <connections>
                         <outlet property="quoteTextLabel" destination="8Zj-vh-h2A" id="bQZ-Jg-dQr"/>
+                        <outlet property="trumpFaceImage" destination="VOL-oO-S0T" id="v05-fh-c25"/>
+                        <outlet property="trumpNameLabel" destination="peG-dX-d0W" id="dvM-8X-3tB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7ND-cC-if3" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -201,13 +203,15 @@
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="rnc-qq-aYX" userLabel="DetailText">
-                                        <rect key="frame" x="38" y="80" width="299" height="124"/>
+                                        <rect key="frame" x="38" y="75" width="299" height="150"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="124" id="vFz-dq-oVU"/>
+                                            <constraint firstAttribute="height" constant="150" id="vFz-dq-oVU"/>
                                         </constraints>
-                                        <string key="text">Showing an alarming countdown to when you may need to move to Canada.
+                                        <string key="text">Spewing Trump sound bites increasingly until polls close on November 8th.
 
-Blasting Trump sound bites increasingly until polls close on election day.
+Counting down to when polls open, close and when you may need to move Canada.
+
+To disable the Trump Alarm, Vote for Hillary.
 </string>
                                         <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="13"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -217,10 +221,10 @@ Blasting Trump sound bites increasingly until polls close on election day.
                                         </userDefinedRuntimeAttributes>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jv7-Tb-C37" userLabel="ButtonContainer">
-                                        <rect key="frame" x="0.0" y="204" width="375" height="113"/>
+                                        <rect key="frame" x="0.0" y="225" width="375" height="92"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lab-zM-dxP" customClass="BorderedButton" customModule="trump_alarm" customModuleProvider="target">
-                                                <rect key="frame" x="62" y="33" width="251" height="47"/>
+                                                <rect key="frame" x="62" y="22.5" width="251" height="47"/>
                                                 <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="17"/>
                                                 <state key="normal" title="GOT IT!">
                                                     <color key="titleColor" red="0.89411764709999997" green="0.78823529410000004" blue="0.2156862745" alpha="1" colorSpace="calibratedRGB"/>
@@ -245,7 +249,7 @@ Blasting Trump sound bites increasingly until polls close on election day.
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="rnc-qq-aYX" firstAttribute="top" secondItem="kxV-g7-zeq" secondAttribute="bottom" constant="6" id="4DT-Dz-881"/>
+                                    <constraint firstItem="rnc-qq-aYX" firstAttribute="top" secondItem="kxV-g7-zeq" secondAttribute="bottom" constant="1" id="4DT-Dz-881"/>
                                     <constraint firstItem="jv7-Tb-C37" firstAttribute="height" relation="lessThanOrEqual" secondItem="MtL-Wd-cGZ" secondAttribute="height" multiplier="0.46" id="4oP-gH-gKF"/>
                                     <constraint firstItem="kxV-g7-zeq" firstAttribute="leading" secondItem="MtL-Wd-cGZ" secondAttribute="leading" constant="20" id="Bv9-dG-QK9"/>
                                     <constraint firstItem="rnc-qq-aYX" firstAttribute="leading" secondItem="MtL-Wd-cGZ" secondAttribute="leading" constant="38" id="CxI-QV-djC"/>
@@ -362,13 +366,13 @@ Blasting Trump sound bites increasingly until polls close on election day.
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="796-bo-2nm" userLabel="BTW H &amp; M">
-                                        <rect key="frame" x="62" y="0.0" width="52.5" height="34.5"/>
+                                        <rect key="frame" x="62" y="0.0" width="53" height="34.5"/>
                                         <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="28"/>
                                         <color key="textColor" red="0.89411764709999997" green="0.78823529410000004" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-SA-JxM" userLabel="min">
-                                        <rect key="frame" x="114.5" y="0.0" width="62" height="34.5"/>
+                                        <rect key="frame" x="115" y="0.0" width="62" height="34.5"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="62" id="U5s-WP-Pbg"/>
                                         </constraints>
@@ -377,7 +381,7 @@ Blasting Trump sound bites increasingly until polls close on election day.
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=":" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="6B4-JW-Uxh" userLabel="BTW M &amp; S">
-                                        <rect key="frame" x="176.5" y="0.0" width="52.5" height="34.5"/>
+                                        <rect key="frame" x="177" y="0.0" width="52" height="34.5"/>
                                         <fontDescription key="fontDescription" name="Verdana-Bold" family="Verdana" pointSize="28"/>
                                         <color key="textColor" red="0.89411764709999997" green="0.78823529410000004" blue="0.2156862745" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
